config/host/sysconfig/iptables
#Generated by iptables-save v1.4.7 on Tue Jun 27 07:48:32 2017
##### 对TCP连接不启用追踪，解决ip_contrack满导致无法连接的问题 
#*raw 
#:PREROUTING ACCEPT [0:0]
#:OUTPUT ACCEPT [0:0]
#-A PREROUTING -p tcp -m tcp --dport 80 -j NOTRACK 
#COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4:368]
#####允许本机访问外网
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
###回环网卡配置
-A INPUT -i lo -j ACCEPT
#####zabbix
-A INPUT -m state --state NEW -m tcp -p tcp  -m multiport --dports 10050,10051,30000,10000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
#####vsftp
#-A INPUT -m state --state NEW -m tcp -p tcp  --dport 40000:40020 -j ACCEPT
#####ssh 30000
-A INPUT -m comment --comment "vpn for ops" -m state --state NEW -m tcp -p tcp  -s 172.247.158.90 --dport 30000 -j ACCEPT
-A INPUT -m comment --comment "local network" -m state --state NEW -m tcp -p tcp  -s 192.168.10.1/24 --dport 30000 -j ACCEPT
-A INPUT -m comment --comment "for new office" -m iprange --src-range 119.92.168.210-119.92.168.210 -p tcp --dport 30000 -j ACCEPT
-A INPUT -m comment --comment "for blj"  -p tcp -m state --state NEW -m tcp -s 52.156.129.111 --dport 30000 -j ACCEPT
-A INPUT -m comment --comment "for blj" -p tcp -m state --state NEW -m tcp -s 18.181.132.80 --dport 30000 -j ACCEPT
-A INPUT -m comment --comment "New Ansible"  -p tcp -m state --state NEW -m tcp -s 138.199.9.181 --dport 30000 -j ACCEPT
-A INPUT -m comment --comment "New jenkins"  -m state --state NEW -m tcp -p tcp -s 54.241.82.56 --dport 30000 -j ACCEPT
#####只允许cdn 访问
#-A INPUT -p tcp -m set --match-set wangsu_whitelist src -m tcp --dport 80 -j ACCEPT
#-A INPUT -p tcp -m set --match-set cloudflare_whitelist src -m tcp --dport 80 -j ACCEPT
#####服务器Ping
#-A INPUT -s 119.92.168.210 -p icmp -m icmp --icmp-type 0 -j ACCEPT
#-A INPUT -s 172.247.158.90 -p icmp -m icmp --icmp-type 8 -j ACCEPT
#-A INPUT -s 119.92.168.210 -p icmp -m icmp --icmp-type 0 -j ACCEPT
#-A INPUT -s 172.247.158.90 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Tue AUG 1 19:48:32 2019
